# rs-bridge

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yaml
src/: bridge.rs  main.rs  metrics.rs  webhook.rs
src/store/: inmem.rs  mod.rs  store.rs
