[package]
name = "sse-bridge"
version = "1.0.0"
edition = "2021"
description = "A simple, fast, and secure server-sent events bridge for TonConnect v2 protocol"
license = "MIT"
authors = ["CatCoder"]


[dependencies]
pretty_env_logger = "0.5.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
warp = "0.3.7"
async-stream = "0.3.5"
base64 = "0.22.1"
futures = "0.3.30"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
log = "0.4.22"
bytes = "1.7.1"
prometheus = "0.13.4"
reqwest = { version = "0.12", features = ["json"] }


[[bin]]
name = "sse-bridge"
path = "src/main.rs"
